# mining-portfolio

./: .env.example  .gitignore  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: scoring_rubrics.yaml  settings.yaml
dashboards/: components.py  daily.py  monthly.py  shared.py  weekly.py
data/: sample_activity_statement.csv  sample_portfolio.csv  sample_tws_export.csv
docs/: project-brief.md  user-guide.md
modules/: decision_engine.py  ev_engine.py  ingestion.py  market_data.py  persistence.py  rebalance_engine.py  risk_engine.py  scoring.py
reports/: pdf_generator.py
tests/: test_decision_engine.py  test_ev_engine.py  test_ingestion.py  test_market_data.py  test_persistence.py  test_rebalance_engine.py  test_risk_engine.py  test_scoring.py
